<resources>
    <string name="app_name">Tsipourman</string>
    <string name="welcome">Ο Tsipourman απευθύνεται αποκλειστικά σε μερακλήδες!</string>
    <string name="tsipourman_app">Πως λειτουργεί το Tsipourman App:</string>
    <string name="step1_text">Κάνεις εγγραφή στο Tsipourman App</string>
    <string name="step1">Κάνε εγγραφή στο Tsipourman App</string>
    <string name="step2">Διάλεξε τα προϊόντα που θες</string>
    <string name="step3">Μόλις η παραγγελία σου είναι έτοιμη θα ειδοποιηθείς για την παράδοσή της</string>
    <string name="register_bg_text">Ξεκίνα</string>
    <string name="login_bg_text">Έχω ήδη λογαριασμό</string>
    <string name="username">Όνομα Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="email">Email</string>
    <string name="register_bg">Εγγραφή</string>
    <string name="register">Εγγραφή</string>
    <string name="login">Είσοδος</string>
    <string name="login_bg">Είσοδος</string>
    <string name="article_string">Article</string>
    <string name="add_label">Το θέλω</string>

    <string name="article_subheading">Article Subheading</string>
    <string name="paragraph"><p><b>Ποιος είναι;</b></p>\n\n
        <p>Ο Tsipourman είναι ο ήρωας κάθε μερακλή γευσιγνώστη ελληνικών αποσταγμάτων!\n\n
            Γεννημένος στην επαρχία γύρω στα τέλη του 1950 έμαθε να αγαπάει την ελληνική γή και τους καρπούς της!\n\n
            Τρυπώνει παντού και αναζητάει συνεχώς μικρά αποστακτήρια για να γευτεί την σοδειά τους!\n\n
            Η αποστολή του είναι να διαδώσει τα νέα παντού και να δημιουργήσει αλκοολικά πάθη μέσα από τα περιπετειώδη ταξίδια του και τις μέθυσες ιστορίες του!\n\n
            <b>Είναι μια ιδέα που προέκυψε μέσα από μια καθημερινή συζήτηση δύο νέων ανθρώπων με αρκετή τρέλα και ανησυχίες. </b></p>\n\n
        <p><b>Τι αποστάγματα έχεις; </b></p>\n\n
        <p>Περιπλανώμενος στην κυριολεξία σε όλη την Ελλάδα, έχω ανακαλύψει και έχω βρει αποστάγματα σπάνια που έχουν μέσα όση αγάπη και μεράκι χρειάζεται για να γευτείς εσύ το καλύτερο.\n\n
            Αποστάγματα από κούμαρα Ολύμπου και κερήθρα Χαλκιδικής, σούμα Πάρου και απόσταγμα από την μοναδική στον κόσμο ποικιλία Ρομπόλα Κεφαλονιάς.\n
            Τσικουδιές από την Ηφαιστειογενή Μήλο και τα Χανιά και Κουκουζίνα Νισύρου.\n\n
            Ψημένη ρακή Αμοργού και βάμμα από τον Παρνασσό.\n\n        Όλα αυτά όχι απλά καλύπτουν κάθε επιθυμία αλλά δημιουργούν και άλλες, για να τα γευτείς όλα.\n\n
            <p><b>Και οι μεζέδες σου; </b></p>\n\n        Κάθε εκλεκτό απόσταγμα είναι σημαντικό να συνοδεύεται και από εκλεκτούς μεζέδες.\n\n
            Συνεχίζοντας στην ίδια φιλοσοφία έχουμε ταιριάξει μεζέδες οι οποίοι δένουν τέλεια με το κάθε απόσταγμα.\n\n
            Διατηρήσαμε ωστόσο τον λαϊκό χαρακτήρα της τσιπουροκατάστασης προσφέροντας λύσεις για κάθε ανάγκη και τσέπη.</p>
</string>
    <string name="title_activity_label">LabelActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>