<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="#E75358">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/welcome_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/welcome"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/explain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tsipourman_app"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/step1"
                    android:layout_width="45dp"
                    android:layout_height="35dp"
                    android:src="@drawable/step1"
                    />
                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="24dp"
                    android:foregroundGravity="center"
                    app:cardBackgroundColor="#231F20"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/step1"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/step2"
                    android:layout_width="45dp"
                    android:layout_height="35dp"
                    android:src="@drawable/step2"
                     />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="24dp"
                    android:foregroundGravity="center"
                    app:cardBackgroundColor="#231F20"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/step2"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/step3"
                    android:layout_width="45dp"
                    android:layout_height="35dp"
                    android:src="@drawable/step3" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="24dp"
                    android:foregroundGravity="center"
                    app:cardBackgroundColor="#231F20"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/step3"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/registerbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/register_bg_text"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:padding="10dp" />



                <Button
                    android:id="@+id/loginbtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="@string/login_bg_text"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:padding="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="15dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:fabCradleVerticalOffset="10dp">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_anchor="@id/bottomAppBar"
        app:backgroundTint="#F39354"
        />
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

